# optimus-cash

./: docker-compose.yaml
api/: .dev.env  .env  Cargo.toml  Dockerfile  Makefile
api/migrations/: 20251006032216_init.down.sql  20251006032216_init.up.sql  20251006032217_table_roles.down.sql  20251006032217_table_roles.up.sql  20251006032218_table_groups.up.sql  20251006032219_table_users.down.sql  20251006032219_table_users.up.sql  20251006032220_functions.down.sql  20251006032220_functions.up.sql  20251006032220_table_group_roles.down.sql  20251006032220_table_group_roles.up.sql  20251006032221_table_user_groups.up.sql
api/rest/: users.rest
api/rest/test/: auth.rest  profile.rest  users.rest
api/seed/: groups.sql  roles.sql  users.sql
api/src/: cli.rs  lib.rs  main.rs
api/src/app/: error.rs
api/src/config/: config.rs
api/src/controller/: auth.rs  auth_controller.rs  controller.rs  group.rs  health_controller.rs  mod.rs  profile.rs  profile_controller.rs  user.rs  user_controller.rs
api/src/db/: db.rs  migration.rs  seed.rs
api/src/error/: mod.rs
api/src/http/: mod.rs  routes.rs  server.rs
api/src/http/request/: auth_request.rs  group_request.rs  mod.rs  user_request.rs
api/src/http/response/: auth_response.rs  error_response.rs  mod.rs
api/src/middleware/: jwt.rs  jwt_middleware.rs  mod.rs
api/src/model/: group.rs  model.rs  role.rs  user.rs
api/src/repository/: group_repository.rs  mod.rs  repository.rs  user_repository.rs
api/src/security/: hash.rs  jwt.rs  mod.rs
api/src/service/: auth_service.rs  group_service.rs  mod.rs  profile_service.rs  user_service.rs
haproxy/: Dockerfile  entrypoint.sh  haproxy.cfg
