[package]
name = "api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "derive", "postgres", "macros", "uuid", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
