[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
argon2 = { version = "0.5.3", features = ["simple"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["env", "derive"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
password-hash = "0.5.0"
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "derive", "postgres", "macros", "uuid", "json"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["chrono", "regex", "serde", "env-filter", "tracing"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
